[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/battle/ui/MNSOUL_SELECTED.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/battle/ui/MNSOUL_UNSELECTED.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/8ope/8ope_shop.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/scenes/battle/foe/panel/BT_E_LIST.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 0, 0, 1 )

[node name="EnemyBase" type="HBoxContainer"]
margin_right = 538.0
margin_bottom = 30.0
rect_min_size = Vector2( 538, 30 )
script = ExtResource( 4 )

[node name="Soul" type="TextureButton" parent="."]
margin_right = 23.0
margin_bottom = 30.0
rect_min_size = Vector2( 23, 30 )
focus_neighbour_left = NodePath("..")
focus_neighbour_right = NodePath("..")
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 1 )

[node name="EnemyName" type="Label" parent="."]
margin_left = 27.0
margin_right = 453.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 29 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Dummy Test"
max_lines_visible = 1

[node name="ControlBar" type="Control" parent="."]
margin_left = 457.0
margin_right = 538.0
margin_bottom = 30.0
grow_horizontal = 0
rect_min_size = Vector2( 81, 30 )

[node name="Health" type="ProgressBar" parent="ControlBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.5
margin_top = -10.0
margin_right = 40.5
margin_bottom = 6.0
grow_horizontal = 0
rect_min_size = Vector2( 81, 16 )
custom_styles/fg = SubResource( 18 )
custom_styles/bg = SubResource( 19 )
value = 80.0
percent_visible = false

[connection signal="focus_entered" from="Soul" to="." method="_on_Soul_focus_entered"]
[connection signal="focus_exited" from="Soul" to="." method="_on_Soul_focus_exited"]
[connection signal="pressed" from="Soul" to="." method="_on_Soul_pressed"]
